# presentations

A Python Journey/: index.html  pyproject.toml
Astronomy: Building a telescope/: emails oficina  index.html
Astronomy: Building a telescope/Oficina Luneta/: Oficina de construção de um telescópio refrator  Stellarium.lnk  WorldWide Telescope.lnk  index.html
Astronomy: Building a telescope/css/: reveal.css
Astronomy: Building a telescope/propostas/: Oficina de construção de um telescópio.xcf
Company Goals/: index.html
Data Analytics/: index.html
Data Analytics/css/: reveal.css
Digital revolution/: index.html
Digital revolution/css/: reveal.css
Fablabs lecture/: index.html
Fablabs lecture/css/: reveal.css
Fablabs lecture/js/: reveal.js
Information Systems/: index.html
Information Systems/css/: reveal.scss
Information Systems/img/pesquisa/: ch-1-intro-to-python-writing-your-first-program-c209ec9c7085.html
Knowledge Management/: demo.html  index.html
Knowledge Management/css/: reveal.css
Knowledge Management/js/: reveal.js
Nonviolent Communication/: index-en.html  index-pt-br.html  index.html
Nonviolent Communication/css/: custom.css
Ovnis Hunter/: Untitled.ipynb  index.html  pyproject.toml
Ovnis Hunter/ovnis_hunter/: README.MD  ovins.json  ovnis_hunter.ipynb  ovnis_hunter_solved.ipynb  pyproject.toml
Ovnis Hunter/ovnis_hunter/ovnis_crawler/ovnis_crawler/spiders/: ovnis_spyder.py
Project Management/: index.html
